--- a/client-app/package.json
+++ b/client-app/package.json
@@ -14,6 +14,8 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "3.4.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
